[package]
name = "rustengan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Crates for serialize and deserialize
serde = { version = "1", features  =["derive"] }
serde_json = "1"

# Crate for error handling
anyhow = "1"

# Crate for unique id generation
ulid = "1"

# Crate Random
rand = "0.8.5"

tokio = { version = "1", features = ["full"] }
async-trait = "0.1.73"
